--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title> sing unto the lord </title>
-<link rel="stylesheet" type="text/css" href="C:/Users/samuel/Desktop/website/style.css" />
+<link rel="stylesheet" type="text/css" href="stylesheet.css" />
 <meta name="viewport" content="width =device-width, initial-scale=1">
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Pattaya&display=swap" rel="stylesheet">
